news-section-style

--- a/lecture33/index.html
+++ b/lecture33/index.html
@@ -212,14 +212,23 @@
         <div class="newsLetter-content">
             <!-- news-left -->
             <div class="news-left">
-                <div>
-
-                </div>
+                <img src="./Image/img.png" loading="lazy" alt="news-img">
             </div>
             <!-- news-right -->
             <div class="news-right">
-                <div>
-
+                <div class="news-info">
+                    <h2 class="news-letter">Get the latest updates</h2>
+                    <p class="news-desc">Sign up for our newsletter</p>
+                </div>
+                <form class="news-from">
+                    <input type="text" class="news-email" placeholder="Email">
+                    <button class="news-send-button">Send</button>
+                </form>
+                <div class="privacy-policy">
+                    By signing up to our newsletter you agree to our
+                    <a class="news-link">Terms of Service</a>
+                    and
+                    <a class="news-link">Privacy policy</a>
                 </div>
             </div>
         </div>
@@ -237,6 +246,10 @@
 
 
 
+    <br>
+    <br>
+    <br>
+    <br>
 
     <header>
         <h1>MD Zahid Husaain</h1>
