news-section-responsive

--- a/lecture33/index.html
+++ b/lecture33/index.html
@@ -220,7 +220,7 @@
                     <h1 class="news-letter">Get the latest updates</h1>
                     <p class="news-desc">Sign up for our newsletter</p>
                 </div>
-                <form class="news-from">
+                <form class="news-form">
                     <input type="text" class="news-email" placeholder="Email">
                     <button class="news-send-button">Send</button>
                 </form>
