footer-section-add

--- a/lecture33/index.html
+++ b/lecture33/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <div class="header">
-        <div class="header-content">
+    <div class="header" id="privacy">
+        <div class="header-content" id="term">
             <a href="#logo" class="logo">
                 <img src="./Image/StudySyn.svg" alt="" class="logo-icon">
                 <span class="logo-text">StudySync</span>
@@ -226,19 +226,135 @@
                 </form>
                 <div class="privacy-policy">
                     By signing up to our newsletter you agree to our
-                    <a class="news-link">Terms of Service</a>
+                    <a class="news-link" href="#term">Terms of Service</a>
                     and
-                    <a class="news-link">Privacy policy</a>
+                    <a class="news-link" href="#privacy">Privacy policy</a>
                 </div>
             </div>
         </div>
     </div>
     <!-- News Letter section end -->
+    <div class="footer-container">
+        <footer class="footer">
+            <div class="footer-top">
+                <div class="comp-logo">
+                    <a href="" class="logo-link">
+                        <img class="logo-svg" src="./Image/StudySyn.svg" alt="">
+                        StudySyn
+                    </a>
+                    <p>Seamless Learning for Brighter Futures.</p>
+                    <div class="social">
+                        <a class="social-link">
+                            <img src="./Image/instagram.svg" class="social-icon" alt="">
+                        </a>
+                        <a class="social-link">
+                            <img src="./Image/linkedin.svg" class="social-icon" alt="">
+                        </a>
+                        <a class="social-link">
+                            <img src="./Image/Microsoft.svg" class="social-icon" alt="">
+                        </a>
+                        <a class="social-link">
+                            <img src="./Image/twitter.svg" class="social-icon" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-grid">
+                <!-- Column 1 -->
+                <div class="footer-grid-column">
+                    <div class="footer-grid-heading">
+                        Products
+                    </div>
+                    <ul class="footer-link-list">
+                        <li>
+                            <a href="#overview" class="footer-link">Overview</a>
+                        </li>
+                        <li>
+                            <a href="#overview" class="footer-link">Overview</a>
+                        </li>
+                        <li>
+                            <a href="#overview" class="footer-link">Overview</a>
+                        </li>
+                        <li>
+                            <a href="#overview" class="footer-link">Overview</a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- Column 2 -->
+                <div class="footer-grid-column">
+                    <div class="footer-grid-heading">
+                        Products
+                    </div>
+                    <ul class="footer-link-list">
+                        <li>
+                            <a href="#overview" class="footer-link">Overview</a>
+                        </li>
+                        <li>
+                            <a href="#overview" class="footer-link">Overview</a>
+                        </li>
+                        <li>
+                            <a href="#overview" class="footer-link">Overview</a>
+                        </li>
+                        <li>
+                            <a href="#overview" class="footer-link">Overview</a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- Column 3 -->
+                <div class="footer-grid-column">
+                    <div class="footer-grid-heading">
+                        Products
+                    </div>
+                    <ul class="footer-link-list">
+                        <li>
+                            <a href="#overview" class="footer-link">Overview</a>
+                        </li>
+                        <li>
+                            <a href="#overview" class="footer-link">Overview</a>
+                        </li>
+                        <li>
+                            <a href="#overview" class="footer-link">Overview</a>
+                        </li>
+                        <li>
+                            <a href="#overview" class="footer-link">Overview</a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- Column 4 -->
+                <div class="footer-grid-column">
+                    <div class="footer-grid-heading">
+                        Products
+                    </div>
+                    <ul class="footer-link-list">
+                        <li>
+                            <a href="#overview" class="footer-link">Overview</a>
+                        </li>
+                        <li>
+                            <a href="#overview" class="footer-link">Overview</a>
+                        </li>
+                        <li>
+                            <a href="#overview" class="footer-link">Overview</a>
+                        </li>
+                        <li>
+                            <a href="#overview" class="footer-link">Overview</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-copy-right">
+                © 2021-Present StudySync. All rights reserved.
+            </div>
+        </footer>
+    </div>
+
+    <!-- Footer section Start -->
+
+    <!-- Footer section  End-->
 
 
 
-
-
+    <br>
+    <br>
     <br>
     <br>
     <br>
