--- a/lecture33/index.html
+++ b/lecture33/index.html
@@ -270,81 +270,82 @@
                             <a href="#overview" class="footer-link">Overview</a>
                         </li>
                         <li>
-                            <a href="#overview" class="footer-link">Overview</a>
+                            <a href="#overview" class="footer-link">Solutions</a>
                         </li>
                         <li>
-                            <a href="#overview" class="footer-link">Overview</a>
+                            <a href="#overview" class="footer-link">Pricing</a>
                         </li>
                         <li>
-                            <a href="#overview" class="footer-link">Overview</a>
+                            <a href="#overview" class="footer-link">Castomers</a>
                         </li>
                     </ul>
                 </div>
                 <!-- Column 2 -->
                 <div class="footer-grid-column">
                     <div class="footer-grid-heading">
-                        Products
+                        Company
                     </div>
                     <ul class="footer-link-list">
                         <li>
-                            <a href="#overview" class="footer-link">Overview</a>
+                            <a href="#overview" class="footer-link">About</a>
                         </li>
                         <li>
-                            <a href="#overview" class="footer-link">Overview</a>
+                            <a href="#overview" class="footer-link">Investor Relations</a>
                         </li>
                         <li>
-                            <a href="#overview" class="footer-link">Overview</a>
+                            <a href="#overview" class="footer-link">Jobs</a>
                         </li>
                         <li>
-                            <a href="#overview" class="footer-link">Overview</a>
+                            <a href="#overview" class="footer-link">Press</a>
+                        </li>
+                        <li>
+                            <a href="#overview" class="footer-link">Blog</a>
                         </li>
                     </ul>
                 </div>
                 <!-- Column 3 -->
                 <div class="footer-grid-column">
                     <div class="footer-grid-heading">
-                        Products
+                        Support
                     </div>
                     <ul class="footer-link-list">
                         <li>
-                            <a href="#overview" class="footer-link">Overview</a>
+                            <a href="#overview" class="footer-link">Contact</a>
                         </li>
                         <li>
-                            <a href="#overview" class="footer-link">Overview</a>
+                            <a href="#overview" class="footer-link">Documentation</a>
                         </li>
                         <li>
-                            <a href="#overview" class="footer-link">Overview</a>
+                            <a href="#overview" class="footer-link">Chat</a>
                         </li>
                         <li>
-                            <a href="#overview" class="footer-link">Overview</a>
+                            <a href="#overview" class="footer-link">FAQ</a>
                         </li>
                     </ul>
                 </div>
                 <!-- Column 4 -->
                 <div class="footer-grid-column">
                     <div class="footer-grid-heading">
-                        Products
+                        Legal
                     </div>
                     <ul class="footer-link-list">
                         <li>
-                            <a href="#overview" class="footer-link">Overview</a>
+                            <a href="#overview" class="footer-link">Terms of Servies</a>
                         </li>
                         <li>
-                            <a href="#overview" class="footer-link">Overview</a>
+                            <a href="#overview" class="footer-link">Privacy Policy</a>
                         </li>
                         <li>
-                            <a href="#overview" class="footer-link">Overview</a>
-                        </li>
-                        <li>
-                            <a href="#overview" class="footer-link">Overview</a>
+                            <a href="#overview" class="footer-link">Cookie settings</a>
                         </li>
                     </ul>
                 </div>
             </div>
-            <div class="footer-copy-right">
-                © 2021-Present StudySync. All rights reserved.
-            </div>
+
         </footer>
+        <div class="footer-copy-right">
+            © 2021-Present StudySync. All rights reserved.
+        </div>
     </div>
 
     <!-- Footer section Start -->
