footer-section addd

--- a/lecture33/index.html
+++ b/lecture33/index.html
@@ -242,7 +242,7 @@
                         <img class="logo-svg" src="./Image/StudySyn.svg" alt="">
                         StudySyn
                     </a>
-                    <p>Seamless Learning for Brighter Futures.</p>
+                    <p class="filter-text">Seamless Learning for Brighter Futures.</p>
                     <div class="social">
                         <a class="social-link">
                             <img src="./Image/instagram.svg" class="social-icon" alt="">
