--- a/lecture33/index.html
+++ b/lecture33/index.html
@@ -234,11 +234,12 @@
         </div>
     </div>
     <!-- News Letter section end -->
+    <!-- Footer section start -->
     <div class="footer-container">
         <footer class="footer">
             <div class="footer-top">
                 <div class="comp-logo">
-                    <a href="" class="logo-link">
+                    <a href="#" class="logo-link">
                         <img class="logo-svg" src="./Image/StudySyn.svg" alt="">
                         StudySyn
                     </a>
@@ -266,16 +267,16 @@
                         Products
                     </div>
                     <ul class="footer-link-list">
-                        <li>
+                        <li class="footer-li-link">
                             <a href="#overview" class="footer-link">Overview</a>
                         </li>
-                        <li>
+                        <li class="footer-li-link">
                             <a href="#overview" class="footer-link">Solutions</a>
                         </li>
-                        <li>
+                        <li class="footer-li-link">
                             <a href="#overview" class="footer-link">Pricing</a>
                         </li>
-                        <li>
+                        <li class="footer-li-link">
                             <a href="#overview" class="footer-link">Castomers</a>
                         </li>
                     </ul>
@@ -286,19 +287,19 @@
                         Company
                     </div>
                     <ul class="footer-link-list">
-                        <li>
+                        <li class="footer-li-link">
                             <a href="#overview" class="footer-link">About</a>
                         </li>
-                        <li>
+                        <li class="footer-li-link">
                             <a href="#overview" class="footer-link">Investor Relations</a>
                         </li>
-                        <li>
+                        <li class="footer-li-link">
                             <a href="#overview" class="footer-link">Jobs</a>
                         </li>
-                        <li>
+                        <li class="footer-li-link">
                             <a href="#overview" class="footer-link">Press</a>
                         </li>
-                        <li>
+                        <li class="footer-li-link">
                             <a href="#overview" class="footer-link">Blog</a>
                         </li>
                     </ul>
@@ -309,16 +310,16 @@
                         Support
                     </div>
                     <ul class="footer-link-list">
-                        <li>
+                        <li class="footer-li-link">
                             <a href="#overview" class="footer-link">Contact</a>
                         </li>
-                        <li>
+                        <li class="footer-li-link">
                             <a href="#overview" class="footer-link">Documentation</a>
                         </li>
-                        <li>
+                        <li class="footer-li-link">
                             <a href="#overview" class="footer-link">Chat</a>
                         </li>
-                        <li>
+                        <li class="footer-li-link">
                             <a href="#overview" class="footer-link">FAQ</a>
                         </li>
                     </ul>
@@ -329,13 +330,13 @@
                         Legal
                     </div>
                     <ul class="footer-link-list">
-                        <li>
+                        <li class="footer-li-link">
                             <a href="#overview" class="footer-link">Terms of Servies</a>
                         </li>
-                        <li>
+                        <li class="footer-li-link">
                             <a href="#overview" class="footer-link">Privacy Policy</a>
                         </li>
-                        <li>
+                        <li class="footer-li-link">
                             <a href="#overview" class="footer-link">Cookie settings</a>
                         </li>
                     </ul>
