--- a/lecture33/index.html
+++ b/lecture33/index.html
@@ -245,16 +245,16 @@
                     </a>
                     <p class="filter-text">Seamless Learning for Brighter Futures.</p>
                     <div class="social">
-                        <a class="social-link">
+                        <a class="social-link" href="https://www.instagram.com/">
                             <img src="./Image/instagram.svg" class="social-icon" alt="">
                         </a>
-                        <a class="social-link">
+                        <a class="social-link" href="https://www.linkedin.com/">
                             <img src="./Image/linkedin.svg" class="social-icon" alt="">
                         </a>
-                        <a class="social-link">
+                        <a class="social-link" href="https://www.microsoft.com/en-in/">
                             <img src="./Image/Microsoft.svg" class="social-icon" alt="">
                         </a>
-                        <a class="social-link">
+                        <a class="social-link" href="https://twitter.com/">
                             <img src="./Image/twitter.svg" class="social-icon" alt="">
                         </a>
                     </div>
@@ -271,13 +271,13 @@
                             <a href="#overview" class="footer-link">Overview</a>
                         </li>
                         <li class="footer-li-link">
-                            <a href="#overview" class="footer-link">Solutions</a>
+                            <a href="#solutions" class="footer-link">Solutions</a>
                         </li>
                         <li class="footer-li-link">
-                            <a href="#overview" class="footer-link">Pricing</a>
+                            <a href="#pricing" class="footer-link">Pricing</a>
                         </li>
                         <li class="footer-li-link">
-                            <a href="#overview" class="footer-link">Castomers</a>
+                            <a href="#castomers" class="footer-link">Castomers</a>
                         </li>
                     </ul>
                 </div>
@@ -288,19 +288,19 @@
                     </div>
                     <ul class="footer-link-list">
                         <li class="footer-li-link">
-                            <a href="#overview" class="footer-link">About</a>
+                            <a href="#about" class="footer-link">About</a>
                         </li>
                         <li class="footer-li-link">
-                            <a href="#overview" class="footer-link">Investor Relations</a>
+                            <a href="#invester-relations" class="footer-link">Investor Relations</a>
                         </li>
                         <li class="footer-li-link">
-                            <a href="#overview" class="footer-link">Jobs</a>
+                            <a href="#jobs" class="footer-link">Jobs</a>
                         </li>
                         <li class="footer-li-link">
-                            <a href="#overview" class="footer-link">Press</a>
+                            <a href="#press" class="footer-link">Press</a>
                         </li>
                         <li class="footer-li-link">
-                            <a href="#overview" class="footer-link">Blog</a>
+                            <a href="#blog" class="footer-link">Blog</a>
                         </li>
                     </ul>
                 </div>
@@ -311,16 +311,16 @@
                     </div>
                     <ul class="footer-link-list">
                         <li class="footer-li-link">
-                            <a href="#overview" class="footer-link">Contact</a>
+                            <a href="#contact" class="footer-link">Contact</a>
                         </li>
                         <li class="footer-li-link">
-                            <a href="#overview" class="footer-link">Documentation</a>
+                            <a href="#documentation" class="footer-link">Documentation</a>
                         </li>
                         <li class="footer-li-link">
-                            <a href="#overview" class="footer-link">Chat</a>
+                            <a href="#chat" class="footer-link">Chat</a>
                         </li>
                         <li class="footer-li-link">
-                            <a href="#overview" class="footer-link">FAQ</a>
+                            <a href="#gaq" class="footer-link">FAQ</a>
                         </li>
                     </ul>
                 </div>
@@ -331,13 +331,13 @@
                     </div>
                     <ul class="footer-link-list">
                         <li class="footer-li-link">
-                            <a href="#overview" class="footer-link">Terms of Servies</a>
+                            <a href="#term-servies" class="footer-link">Terms of Servies</a>
                         </li>
                         <li class="footer-li-link">
-                            <a href="#overview" class="footer-link">Privacy Policy</a>
+                            <a href="#privacy-policy" class="footer-link">Privacy Policy</a>
                         </li>
                         <li class="footer-li-link">
-                            <a href="#overview" class="footer-link">Cookie settings</a>
+                            <a href="#cookie" class="footer-link">Cookie settings</a>
                         </li>
                     </ul>
                 </div>
@@ -355,14 +355,7 @@
 
 
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
-    <header>
+    <!-- <header>
         <h1>MD Zahid Husaain</h1>
         <p>Front End Developer from Muzaffarpur, Bihar</p>
     </header>
@@ -392,7 +385,7 @@
 
     <footer>
         <p>Contact me at: your@email.com</p>
-    </footer>
+    </footer> -->
 
 </body>
 
